- sql:
    - exists() becomes useable as a standalone selectable, not just in a 
    WHERE clause
    - correlated subqueries work inside of ORDER BY, GROUP BY
    - fixed function execution with explicit connections, when you dont 
    explicitly say "select()" off the function, i.e. 
    conn.execute(func.dosomething())
    - use_labels flag on select() wont auto-create labels for literal text
      column elements, since we can make no assumptions about the text. to
      create labels for literal columns, you can say "somecol AS somelabel",
      or use literal_column("somecol").label("somelabel")
    - quoting wont occur for literal columns when they are "proxied" into the
    column collection for their selectable (is_literal flag is propigated)
    - added "fold_equivalents" argument to Join.select(), which removes
    'duplicate' columns from the resulting column clause that are known to be 
    equivalent based on the join condition.  this is of great usage when 
    constructing subqueries of joins which Postgres complains about if 
    duplicate column names are present.
- orm:
    - a full select() construct can be passed to query.select() (which
      worked anyway), but also query.selectfirst(), query.selectone() which
      will be used as is (i.e. no query is compiled). works similarly to
      sending the results to instances().
    - added "refresh-expire" cascade [ticket:492]
    - more fixes to polymorphic relations, involving proper lazy-clause
      generation on many-to-one relationships to polymorphic mappers 
      [ticket:493]
    
0.3.5
- sql:
    - the value of "case_sensitive" defaults to True now, regardless of the
      casing of the identifier, unless specifically set to False. this is
      because the object might be label'ed as something else which does
      contain mixed case, and propigating "case_sensitive=False" breaks that.
      Other fixes to quoting when using labels and "fake" column objects